--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,14 +38,14 @@
         </li>
       </ul>
       <form class="d-flex" #f="ngForm" (ngSubmit)="onsearch(f.value)">
-        <input class="form-control me-2"  name="search" ngModel  type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <input class="form-control me-2" required="" name="search" ngModel  type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" [disabled]="!f.valid" type="submit">Search</button>
       </form> 
       <ul class="navbar-nav me-auto mb-2 mb-lg-3 float-end">
         <li class="nav-item " style="color: rosybrown; font-size: 30px; " >
         
           <i class="bi bi-cart-check clickable" (click)="caddy()">
-            {{caddyService.getCurrentCaddy()?.items?.size}}
+            {{caddyService.getTotalQuantity()}}
           </i>
 
         </li>
