--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,57 @@
+<div *ngIf="products">
 
+  <button class="btn btn-outline-success" (click)="addProducts()"
+  *ngIf="authService.isAdmin()"> add Products</button>
+  <button class="btn btn-outline-success" (click)="addCategories()"
+  *ngIf="authService.isAdmin()"> add Categories</button>
+  <div class="row row-cols-3">
+  
+    <div class="col" *ngFor="let p of products._embedded.products">
+			<img class="thumbnail" src="{{this.productService.host+'/photoProduct/'+p.id+'?ts='+getTS()}}">
+			<div class="box-element product">
+				<h6><strong>{{p.name}}
+          <span *ngIf="p.promotion">
+            <i class="bi bi-star fa-5x  " style="color: rgba(255, 0, 0, 0.733); font-size: 20px;"></i>
+        </span>
+        <span *ngIf="p.selected">
+          <i class="bi bi-balloon-heart  " style="color: rgb(240, 48, 58); font-size: 20px;" ></i>
+      </span>
+      <span *ngIf="p.available">
+       
+           
+     <i class="bi bi-check2-circle  " style="color: rgb(14, 207, 56); font-size: 20px;"></i>
+          
+      </span>
+        </strong></h6>
+				<hr>
+
+				<button 
+				 class="btn btn-outline-secondary add-btn update-cart" (click)="onAddProductTocaddy(p)"   >Add to Cart</button>
+				<a class="btn btn-outline-success" (click)="onProductsDetails(p)" >View</a>
+				<h4 style="display: inline-block; float: right"><strong>{{p.currentprice|number:'0.2'}}</strong></h4>
+        <div *ngIf="authService.isAdmin()">
+           <button (click)="onEditPhoto(p)"  > 
+               <span class="upload-btn"></span>
+           </button>
+                 
+           <p *ngIf="editPhoto && currentProduct==p" >
+               <input type='file' (change)="onSelectedFile($event)">
+                                <button class="btn btn-success" (click)="upload()">Upload</button>
+                                {{progress }}
+           </p>
+                          
+          </div>  
+        <br><br><br>  
+</div>
+			</div>
+		</div>
+  
+
+
+
+
+
+<!----
 <div class="" *ngIf="products">
     <div>
         <h3 class="center">{{tilte}}</h3>
@@ -43,11 +96,11 @@
             </span>
             
             <span *ngIf="p.available">
-              <!----
+              <----
                 <img src="/assets/images/availl.png"  
                 class="rounded-circle float-start"
                  height="100" width="100%"
-               !-->
+               
                  
            <i class="bi bi-check2-circle  " style="color: rgb(14, 207, 56); font-size: 20px;"></i>
                 
@@ -73,7 +126,7 @@
          </div>
          
          
-         
+!-->
          
          
          
